# codeflow

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.github/workflows/: ci.yml
java/com/codeflow/result/: BUILD.bazel  Functions.java  Result.java  ResultCollectionUtils.java  ResultStreamUtils.java  ResultUtils.java
javatests/com/codeflow/result/: BUILD.bazel  ResultCollectionUtilsTest.java  ResultStreamUtilsTest.java  ResultSyntaxTest.java  ResultTest.java
tools/: junit6.bzl
tools/format/: BUILD.bazel
tools/hooks/: BUILD.bazel  pre-commit.sh  setup-hooks.sh
tools/junit/: junit6.bzl
