module(
    name = "codeflow",
    version = "1.0",
    bazel_compatibility = [">=9.1.0"],
)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.31.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        # The Core JUnit 6 (Jupiter) API & Engine
        "org.junit.jupiter:junit-jupiter-api:5.11.0",
        "org.junit.jupiter:junit-jupiter-engine:5.11.0",
        "org.junit.jupiter:junit-jupiter-params:5.11.0",
        # The Platform (The "JUnit 6" foundation)
        "org.junit.platform:junit-platform-launcher:1.11.0",
        "org.junit.platform:junit-platform-reporting:1.11.0",
        "org.junit.platform:junit-platform-console:1.11.0",
        "org.junit.platform:junit-platform-suite-api:1.11.0",
    ],
    known_contributing_modules = ["protobuf"],
)
use_repo(maven, "maven")